# relay-mcp

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/mcp_relay/: __init__.py  db.py  discovery.py  main.py  main.py.bak  models.py
