[project]
name = "mcp-relay"
version = "0.1.0"
description = "Minimal MCP server relay with REST API for registration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "mcp>=1.0.0",
    "anyio>=4.0.0",
    "sse-starlette>=2.0.0",
    # Fuzzy search (lightweight alternative to sentence-transformers)
    "rapidfuzz>=3.0.0",
    # OTel for observability
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_relay"]
